--- a/SAM_UI/SAM.Core.UI/Properties/Resources.resx
+++ b/SAM_UI/SAM.Core.UI/Properties/Resources.resx
@@ -119,9 +119,9 @@
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="SAM" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SAM.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
-  </data>
-  <data name="SAM" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="SAM1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
