Edit AnalyticalModel Properties Added

--- a/SAM_UI/SAM.Analytical.UI/Properties/Resources.resx
+++ b/SAM_UI/SAM.Analytical.UI/Properties/Resources.resx
@@ -148,6 +148,9 @@
   <data name="SAM_ApertureConstruction" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_ApertureConstruction.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAM_AddMissingObjects" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_AddMissingObjects.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SAM_ModelCheck" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_ModelCheck.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -202,7 +205,7 @@
   <data name="SAM_New" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_New.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SAM_AddMissingObjects" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SAM_AddMissingObjects.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SAM_AnalyticalModelProperties" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_AnalyticalModelProperties.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
