--- a/SAM_UI/SAM.Analytical.UI/Properties/Resources.resx
+++ b/SAM_UI/SAM.Analytical.UI/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="SAM_SolarCalculator" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_SolarCalculator.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAM_AnalyticalModelProperties" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_AnalyticalModelProperties.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SAM_Clean" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_Clean.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -205,7 +208,7 @@
   <data name="SAM_New" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_New.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="SAM_AnalyticalModelProperties" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\SAM_AnalyticalModelProperties.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="SAM_PrintRDS" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_PrintRDS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
