--- a/WPF/SAM.Analytical.UI.WPF/Properties/Resources.resx
+++ b/WPF/SAM.Analytical.UI.WPF/Properties/Resources.resx
@@ -190,6 +190,9 @@
   <data name="SAM_SaveAs" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_SaveAs.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAM_Section" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_Section.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SAM_Small" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_Small.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
