--- a/WPF/SAM.Analytical.UI.WPF/Properties/Resources.resx
+++ b/WPF/SAM.Analytical.UI.WPF/Properties/Resources.resx
@@ -178,6 +178,9 @@
   <data name="SAM_Open" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_Open.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="SAM_PartL" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\SAM_PartL.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="SAM_PrintRDS" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\SAM_PrintRDS.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
